--- a/VenespanaSync/nbproject/project.properties
+++ b/VenespanaSync/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=VenespanaSync
+application.vendor=Lasar-Soporte
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,35 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/VenespanaSync.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.classmate-1.3.3.jar=lib\\classmate-1.3.3.jar
+file.reference.dom4j-2.0.0.jar=lib\\dom4j-2.0.0.jar
+file.reference.hibernate-commons-annotations-5.0.1.Final.jar=lib\\hibernate-commons-annotations-5.0.1.Final.jar
+file.reference.hibernate-core-5.2.5.Final.jar=lib\\hibernate-core-5.2.5.Final.jar
+file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=lib\\hibernate-jpa-2.0-api-1.0.1.Final.jar
+file.reference.javax.jar=lib\\javax.jar
+file.reference.jboss-logging-3.3.0.Final.jar=lib\\jboss-logging-3.3.0.Final.jar
+file.reference.jta-1.1.jar=lib\\jta-1.1.jar
+file.reference.mysql-connector-java-5.0.8-bin.jar=lib\\mysql-connector-java-5.0.8-bin.jar
+file.reference.openjpa-2.4.1.jar=lib\\openjpa-2.4.1.jar
+file.reference.persistence-api-1.0.2.jar=lib\\persistence-api-1.0.2.jar
+file.reference.persistence-api-1.0.jar=lib\\persistence-api-1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hibernate-core-5.2.5.Final.jar}:\
+    ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
+    ${file.reference.openjpa-2.4.1.jar}:\
+    ${file.reference.persistence-api-1.0.jar}:\
+    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
+    ${file.reference.jta-1.1.jar}:\
+    ${file.reference.dom4j-2.0.0.jar}:\
+    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
+    ${file.reference.persistence-api-1.0.2.jar}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
+    ${file.reference.classmate-1.3.3.jar}:\
+    ${file.reference.javax.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +84,7 @@ main.class=venespanasync.VenespanaSync
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7_79
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
