--- a/VenespanaSync/nbproject/project.properties
+++ b/VenespanaSync/nbproject/project.properties
@@ -29,31 +29,29 @@ dist.jar=${dist.dir}/VenespanaSync.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.classmate-1.3.3.jar=lib\\classmate-1.3.3.jar
+file.reference.antlr-3.5.2-complete.jar=lib\\antlr-3.5.2-complete.jar
+file.reference.classmate-1.3.3.jar=lib/classmate-1.3.3.jar
 file.reference.dom4j-2.0.0.jar=lib\\dom4j-2.0.0.jar
 file.reference.hibernate-commons-annotations-5.0.1.Final.jar=lib\\hibernate-commons-annotations-5.0.1.Final.jar
 file.reference.hibernate-core-5.1.3.Final.jar=lib/hibernate-core-5.1.3.Final.jar
 file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=lib/hibernate-jpa-2.1-api-1.0.0.Final.jar
-file.reference.javax.jar=lib\\javax.jar
-file.reference.jboss-logging-3.3.0.Final.jar=lib\\jboss-logging-3.3.0.Final.jar
+file.reference.javassist-3.12.1.GA.jar=lib\\javassist-3.12.1.GA.jar
+file.reference.jboss-logging-3.3.0.Final.jar=lib/jboss-logging-3.3.0.Final.jar
 file.reference.jta-1.1.jar=lib\\jta-1.1.jar
 file.reference.mysql-connector-java-5.0.8-bin.jar=lib\\mysql-connector-java-5.0.8-bin.jar
-file.reference.openjpa-2.4.1.jar=lib\\openjpa-2.4.1.jar
-file.reference.persistence-api-1.0.2.jar=lib\\persistence-api-1.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
     ${file.reference.hibernate-core-5.1.3.Final.jar}:\
-    ${file.reference.openjpa-2.4.1.jar}:\
-    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
-    ${file.reference.jta-1.1.jar}:\
-    ${file.reference.dom4j-2.0.0.jar}:\
     ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
-    ${file.reference.persistence-api-1.0.2.jar}:\
-    ${file.reference.classmate-1.3.3.jar}:\
     ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
-    ${file.reference.javax.jar}
+    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
+    ${file.reference.dom4j-2.0.0.jar}:\
+    ${file.reference.jta-1.1.jar}:\
+    ${file.reference.classmate-1.3.3.jar}:\
+    ${file.reference.javassist-3.12.1.GA.jar}:\
+    ${file.reference.antlr-3.5.2-complete.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
